--- a/aur-repo/deepin-unioncode-git/PKGBUILD
+++ b/aur-repo/deepin-unioncode-git/PKGBUILD
@@ -2,7 +2,7 @@
 
 pkgbase=deepin-unioncode-git
 pkgname=deepin-unioncode-git
-pkgver=1.2.9.r90.g24d1ace
+pkgver=1.3.10.r38.g34be0b9
 pkgrel=1
 pkgdesc="IDE authored by deepin"
 arch=(x86_64
@@ -43,10 +43,12 @@ depends=(
     qt5-webengine
     syntax-highlighting5
     python
+    yaml-cpp
     zstd)
 makedepends=(
     argtable
     cmake
+    cmark
     git
     ninja
     catch2
@@ -58,28 +60,29 @@ makedepends=(
     libmicrohttpd
     libutf8proc
     libxi
-    lxqt-build-tools
+    lxqt-build-tools-qt5
     qt5-tools
+    qtermwidget
     openssl
     systemd
     pkgconf
-    )
+)
 checkdepends=()
 optdepends=()
 source=("${pkgname}::git+${url}.git")
 sha256sums=('SKIP')
-# options=('!strip')
+options=()
 
 pkgver() {
     cd "${srcdir}/${pkgname}"
-    ( set -o pipefail
+    (
+        set -o pipefail
         git describe --long --tag --abbrev=7 2>/dev/null | sed 's/^[vV]//g;s/\([^-]*-g\)/r\1/;s/-/./g' ||
-        printf "r%s.%s" "$(git rev-list --count HEAD)" "$(git rev-parse --short=7 HEAD)"
+            printf "r%s.%s" "$(git rev-list --count HEAD)" "$(git rev-parse --short=7 HEAD)"
     )
 }
 
-prepare()
-{
+prepare() {
     git -C "${srcdir}/${pkgname}" clean -dfx
 }
 
@@ -87,7 +90,7 @@ build() {
     export LDFLAGS="-Wl,-z,relro,-z,now -Wl,-z,shstk -Wl,--no-as-needed"
     cd "${srcdir}/${pkgname}"
 
-# See：https://wiki.archlinux.org/title/CMake_package_guidelines
+    # See：https://wiki.archlinux.org/title/CMake_package_guidelines
     # cmake -DCMAKE_BUILD_TYPE=None \
     cmake -DCMAKE_BUILD_TYPE=Release \
         -DCMAKE_INSTALL_PREFIX=/usr \
