--- a/aur-repo/linux-gpib/lilac.yaml
+++ b/aur-repo/linux-gpib/lilac.yaml
@@ -1,6 +1,6 @@
 maintainers:
   - github: taotieren
-pre_build_script: aur_pre_build(maintainers=['Foucault])
+pre_build_script: aur_pre_build(maintainers=['Foucault'])
 post_build: aur_post_build
 update_on:
   - source: aur
