--- a/aur-repo/mtkclient-git/lilac.yaml
+++ b/aur-repo/mtkclient-git/lilac.yaml
@@ -1,10 +1,10 @@
 maintainers:
   - github: taotieren
-
 pre_build_script: aur_pre_build(maintainers=['BenTheTechGuy', 'xiota'])
-
 post_build: aur_post_build
-
+repo_depends:
+  - python-fusepy
+  - python-mock
 update_on:
   - source: github
     github: bkerler/mtkclient
