--- a/aur-repo/mtkclient/lilac.yaml
+++ b/aur-repo/mtkclient/lilac.yaml
@@ -1,10 +1,10 @@
 maintainers:
   - github: taotieren
-
 pre_build_script: aur_pre_build(maintainers='BenTheTechGuy')
-
 post_build: aur_post_build
-
+repo_depends:
+  - python-fusepy
+  - python-mock
 update_on:
   - source: aur
     aur: mtkclient
