python-kicadmodtree: auto updated to 1.1.2.r579.ge1fe318-1

--- a/aur-repo/python-kicadmodtree/PKGBUILD
+++ b/aur-repo/python-kicadmodtree/PKGBUILD
@@ -1,8 +1,8 @@
 # Maintainer: taotieren <admin@taotieren.com>
 
 pkgname=python-kicadmodtree
-pkgver=1.1.2.r577.g645eec7
-pkgrel=3
+pkgver=1.1.2.r579.ge1fe318
+pkgrel=1
 epoch=
 pkgdesc="This repository contains scripts to generate custom KiCAD footprints using python, and a framework which allows us to create custom KiCAD footprint. A big bunch of footprints of the KiCad library was developed using this framework."
 arch=('any')
