--- a/aur-repo/deeplx-git/PKGBUILD
+++ b/aur-repo/deeplx-git/PKGBUILD
@@ -1,8 +1,8 @@
 # Maintainer: taotieren <admin@taotieren.com>
 
 pkgname=deeplx-git
-pkgver=0.9.7.r4.gac8ec23
-pkgrel=2
+pkgver=0.9.8.r0.gc678e87
+pkgrel=1
 pkgdesc="DeepL Free API (No TOKEN required)"
 arch=(x86_64
     aarch64
