--- a/aur-repo/cloudflarespeedtest-git/PKGBUILD
+++ b/aur-repo/cloudflarespeedtest-git/PKGBUILD
@@ -1,7 +1,7 @@
 # Contributor: taotieren <admin@taotieren.com>
 
 pkgname=cloudflarespeedtest-git
-pkgver=2.2.5.22.gbbe762c
+pkgver=2.2.5.23.g66c0923
 pkgrel=1
 pkgdesc="XIU2/CloudflareSpeedTest 🌩 “Choose Your Own Preferred IP” Test Cloudflare CDN latency and speed, get the fastest IP! Written in go."
 arch=(aarch64
