--- a/aur-repo/jidugs-appimage/lilac.yaml
+++ b/aur-repo/jidugs-appimage/lilac.yaml
@@ -1,18 +1,14 @@
 maintainers:
   - github: taotieren
-
 build_prefix: extra-x86_64
-
 pre_build_script: |
   update_pkgver_and_pkgrel(_G.newver)
-
 post_build_script: |
   git_pkgbuild_commit()
   update_aur_repo()
-
 update_on:
   - source: regex
-    url: "https://jidugs.wrste.com/#page2"
+    url: "https://jidugs.wlhex.com/#page2"
     regex: '极度公式-(\d+.\d+.\d+).AppImage'
   - source: manual
     manual: 1
