--- a/aur-repo/jlink-software-and-documentation/lilac.yaml
+++ b/aur-repo/jlink-software-and-documentation/lilac.yaml
@@ -1,10 +1,7 @@
 maintainers:
   - github: taotieren
-
-pre_build_script: aur_pre_build(maintainers='AlexisPolti')
-
+pre_build_script: aur_pre_build(maintainers=['AlexisPolti', 'pzl'])
 post_build: aur_post_build
-
 update_on:
   - source: aur
     aur: jlink-software-and-documentation
