--- a/aur-repo/jlink/lilac.yaml
+++ b/aur-repo/jlink/lilac.yaml
@@ -1,15 +1,11 @@
 maintainers:
   - github: taotieren
-
-pre_build_script: aur_pre_build(maintainers='pzl')
-
+pre_build_script: aur_pre_build(maintainers=['AlexisPolti', 'pzl'])
 post_build: aur_post_build
-
 repo_depends:
   - jlink-software-and-documentation
   - jlink-systemview
   - ozone
-
 update_on:
   - source: aur
     aur: jlink
