poedit-git: auto updated to 3.5.1.r9.g643bb9d0c-1

--- a/aur-repo/poedit-git/PKGBUILD
+++ b/aur-repo/poedit-git/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: taotieren <admin@taotieren.com>
 
 pkgname=poedit-git
-pkgver=3.5.1.r1.gd4b007054
+pkgver=3.5.1.r9.g643bb9d0c
 pkgrel=1
 epoch=
 pkgdesc="Translations editor for Mac, Windows and Unix"
