--- a/aur-repo/proxmark3-iceman-git/PKGBUILD
+++ b/aur-repo/proxmark3-iceman-git/PKGBUILD
@@ -138,7 +138,7 @@ build() {
   done
 
   # Build & install other targets
-  #   make {client,bootrom,recovery,mfc_card_only,mfc_card_reader,mfd_aes_brute,fpga_compress,cryptorf,common,}/install
+  #   make {client,bootrom,recovery,mfc_card_only,mfc_card_reader,mfd_aes_brute,fpga_compress,cryptorf,common}/install
   make install
 }
 
