--- a/aur-repo/proxmark3-iceman-git/PKGBUILD
+++ b/aur-repo/proxmark3-iceman-git/PKGBUILD
@@ -8,20 +8,29 @@ pkgdesc='RRG / Iceman repo - Proxmark3 RDV4.0 and other Proxmark3 platforms.'
 arch=('x86_64')
 url='https://github.com/RfidResearchGroup/proxmark3'
 license=('GPL-2.0-only')
-depends=('perl'
+depends=(
+  'bash'
+  'bzip2'
+  'gcc-libs'
+  'glibc'
+  'readline'
+  'lz4'
+  'jansson'
+  'perl'
   'python'
   'libsndfile'
   'bluez'
   'bluez-libs'
   'gd'
-  'qt5-tools')
+  'qt5-base')
 makedepends=('git'
   'arm-none-eabi-gcc'
   'arm-none-eabi-newlib'
+  'qt5-tools'
   'pkgconf'
-  'readline'
-  'bzip2'
-  'lz4'
+  #   'readline'
+  #   'bzip2'
+  #   'lz4'
   #   'lua'
   #   'libwhereami'
 )
