--- a/aur-repo/python-bflb-crypto-plus/PKGBUILD
+++ b/aur-repo/python-bflb-crypto-plus/PKGBUILD
@@ -10,11 +10,12 @@ arch=('any')
 url="https://pypi.org/project/bflb-crypto-plus"
 license=('LGPL-3.0-or-later')
 groups=()
-_pydeps=(
-    )
+# _pydeps=(
+#     )
 depends=(
     python
-    "${_pydeps[@]/#/python-}")
+    #     "${_pydeps[@]/#/python-}"
+)
 _pymakedeps=(
     build
     installer
