--- a/aur-repo/proxmark3-iceman-git/PKGBUILD
+++ b/aur-repo/proxmark3-iceman-git/PKGBUILD
@@ -8,6 +8,11 @@ pkgdesc='RRG / Iceman repo - Proxmark3 RDV4.0 and other Proxmark3 platforms.'
 arch=('x86_64')
 url='https://github.com/RfidResearchGroup/proxmark3'
 license=('GPL-2.0-only')
+_pydeps=(
+  bitarray
+  pyaudio
+  numpy
+)
 depends=(
   'bash'
   'bzip2'
@@ -18,6 +23,7 @@ depends=(
   'jansson'
   'perl'
   'python'
+  "${_pydeps[@]/#/python-}"
   'libsndfile'
   'bluez'
   'bluez-libs'
