--- a/aur-repo/shutu-client-bin/lilac.yaml
+++ b/aur-repo/shutu-client-bin/lilac.yaml
@@ -2,6 +2,8 @@ maintainers:
   - github: taotieren
 pre_build_script: aur_pre_build(maintainers=['zxp19821005'])
 post_build: aur_post_build
+repo_depends:
+  - electron21-bin
 update_on:
   - source: aur
     aur: shutu-client-bin
