--- a/aur-repo/shutu-client-bin/PKGBUILD
+++ b/aur-repo/shutu-client-bin/PKGBUILD
@@ -6,8 +6,8 @@ _enname=TreeMind
 _zhsname="树图思维导图"
 pkgver=1.0.7
 _electronversion=21
-pkgrel=2
-pkgdesc="A new generation of 'AI intelligence' mind map.新一代'AI智能'思维导图"
+pkgrel=3
+pkgdesc="A new generation of 'AI intelligence' mind map.Prebuilt version.Use system-wide electron.新一代'AI智能'思维导图"
 arch=('x86_64')
 url="https://shutu.cn"
 license=('LicenseRef-custom')
@@ -21,27 +21,32 @@ depends=(
 )
 source=(
     "${pkgname%-bin}-${pkgver}.deb::https://static.shutu.cn/client/download/ShuTu-Linux-${pkgver}.deb"
-    "LICENSE-user.html::${url}/user-agreement.html"
-    "LICENSE-privacy.html::${url}/privacy.html"
-    "LICENSE-upload.html::${url}/upload.html"
+    "LICENSE-user.html"
+    "LICENSE-privacy.html"
+    "LICENSE-upload.html"
     "${pkgname%-bin}.sh"
 )
 sha256sums=('923bd86ab825a23aa31e0b8aaf04f56a3fd427c23f8f78a6fe31b9cf1eae30f3'
-            'f177bc56d0d6f2b18128a67f1aa080f1708f48e0ac92ea985383f1896f23bd73'
-            '366f721da89ec312cb4917a4596544a7945df77e9a677103e06d0e84f73a4168'
+            '0c61137e0949077ce76ecee1d5709b054b272bb6787fa6b2bfe63dbc16175ccd'
+            '08b36b6ebe9256e91033557c43fe911857a2eea4c1ac07e19e61c577f219a09a'
             'bce7b2ffb9a99535c7ede2122a9c078226affd95f2cfe4e9831c8f79586429a3'
-            '2b2e8aeed33fd71c521e49fd54fb2fa81218d16aef8bccb88d77909055ab8051')
+            '291f50480f5a61bc9c68db7d44cd0412071128706baa868a9cb854f8779a1980')
 build() {
-    sed -e "s|@electronversion@|${_electronversion}|" \
-        -e "s|@appname@|${pkgname%-bin}|g" \
-        -e "s|@runname@|app.asar|g" \
-        -e "s|@cfgdirname@|${_appname}|g" \
-        -e "s|@options@||g" \
-        -i "${srcdir}/${pkgname%-bin}.sh"
+    sed -e "
+        s/@electronversion@/${_electronversion}/g
+        s/@appname@/${pkgname%-bin}/g
+        s/@runname@/app.asar/g
+        s/@cfgdirname@/${_appname}/g
+        s/@options@//g
+    " -i "${srcdir}/${pkgname%-bin}.sh"
     bsdtar -xf "${srcdir}/data."*
-    sed -e "s|\"/opt/${_zhsname}/${_appname}\"|${pkgname%-bin}|g;s|Icon=${_appname}|Icon=${pkgname%-bin}|g" \
-        -e "s|Name=|Name[zh_CN]=|g;s|Comment=${_zhsname}|Comment=${pkgdesc}|g;2i\Name=${_enname}" \
-        -i "${srcdir}/usr/share/applications/${_appname}.desktop"
+    sed -e "
+        s/\"\/opt\/${_zhsname}\/${_appname}\"/${pkgname%-bin}/g
+        s/Icon=${_appname}/Icon=${pkgname%-bin}/g
+        s/Name=/Name[zh_CN]=/g
+        s/Comment=${_zhsname}/Comment=${pkgdesc}/g
+        2i\Name=${_enname}
+    " -i "${srcdir}/usr/share/applications/${_appname}.desktop"
 }
 package() {
     install -Dm755 "${srcdir}/${pkgname%-bin}.sh" "${pkgdir}/usr/bin/${pkgname%-bin}"
