--- a/aur-repo/oss/lilac.yaml
+++ b/aur-repo/oss/lilac.yaml
@@ -2,8 +2,8 @@ maintainers:
   - github: taotieren
 pre_build_script: aur_pre_build(maintainers=['alexdw'])
 post_build: aur_post_build
-repo_depends:
-  - oss
+# repo_depends:
+#   - oss
 update_on:
   - source: aur
     aur: oss
