jlink-software-and-documentation: auto updated to 62:8.10c-0

--- a/aur-repo/jlink-software-and-documentation/PKGBUILD
+++ b/aur-repo/jlink-software-and-documentation/PKGBUILD
@@ -2,7 +2,7 @@
 # Maintainer: pzl <alsoelp at gmail dot com>
 
 pkgname=jlink-software-and-documentation
-pkgver=8.10b
+pkgver=8.10c
 pkgrel=0
 epoch=62
 pkgdesc="Segger JLink software & documentation pack for Linux"
@@ -37,10 +37,10 @@ desktops=(
         "JTAGLoadExe.desktop"
 )
 source+=(${desktops[@]})
-md5sums_x86_64=('cfb639f9174c2b377aa88cc9d2a6dc53')
-md5sums_i686=('da0a52249b2792a084cfae93c4d5db57')
-md5sums_aarch64=('e3e28a9991c7f61260765c6b291fc96d')
-md5sums_armv7h=('f297a84b2d3419d5c2da030c35018354')
+md5sums_x86_64=('52b7aa305acf53db10c3fb7d86b851e0')
+md5sums_i686=('5bfd9308caa59f1f21534382c8e88fdb')
+md5sums_aarch64=('eff96ef1435ff429d9f0ed8f1892bc74')
+md5sums_armv7h=('8993d216cbad176e902f588ab4e4c05a')
 
 md5sums=("a57d93b791581c1f36e4c672303bb85d"
          "02c4941650a2bd345b03dd958313d4c5"
