--- a/aur-repo/xunscore-bin/PKGBUILD
+++ b/aur-repo/xunscore-bin/PKGBUILD
@@ -2,7 +2,7 @@
 pkgname=xunscore-bin
 _pkgname=Xunscore
 pkgver=1.3.13.03
-pkgrel=3
+pkgrel=4
 pkgdesc='A music notation software, let you easily create and share sheet music. The editor is called "xūn", is hoping it will be a better balance between the Chinese national music'
 arch=('x86_64')
 url="https://www.xunscore.cn"
@@ -29,6 +29,7 @@ depends=(
 )
 makedepends=(
     'gendesk'
+    'imagemagick'
 )
 options=(
     '!emptydirs'
@@ -36,12 +37,14 @@ options=(
 noextract=("${pkgname%-bin}-${pkgver}.zip")
 source=(
     "${pkgname%-bin}-${pkgver}.zip::${url}/${pkgname%-bin}-ubt-${pkgver}.zip"
-    "LICENSE::${_giteeurl}/raw/master/README.md"
+    "${pkgname%-bin}.ico::${url}/favicon.ico"
+    "LICENSE"
     "${pkgname%-bin}.sh"
 )
 sha256sums=('54adaace209ec36dcdf739a6e5710c002df47c3bab180aa2025721c72d2c1803'
-    '860e31598b0ffcf52f67a4389a13832e2b8e72cc75e15025cf5ccde494596bbe'
-    '20acff6b7caae22bc23e515772f7da6802c9fac0313c0ca272282b89c770046f')
+            'e6f9d163300a261baeb5e4865c2d5877ebe16c06127a799c1b3f33c6441023bb'
+            '93c773a0b8e2e2926f4178d4626c23a78fe2ce2473198eb0a9bf6f1ae52d928d'
+            '20acff6b7caae22bc23e515772f7da6802c9fac0313c0ca272282b89c770046f')
 build() {
     sed -e "
         s/@appname@/${pkgname%-bin}/g
@@ -51,11 +54,12 @@ build() {
     install -Dm755 -d "${srcdir}/usr/lib"
     bsdtar -xf "${srcdir}/${pkgname%-bin}-${pkgver}.zip" -C "${srcdir}/usr/lib"
     chmod 644 "${srcdir}/usr/lib/${pkgname%-bin}/soundfonts/metronome.sf2"
+    magick "${srcdir}/${pkgname%-bin}.ico" "${srcdir}/${pkgname%-bin}.png"
 }
 package() {
     install -Dm755 "${srcdir}/${pkgname%-bin}.sh" "${pkgdir}/usr/bin/${pkgname%-bin}"
     cp -r "${srcdir}/usr" "${pkgdir}"
     install -Dm644 "${srcdir}/LICENSE" -t "${pkgdir}/usr/share/licenses/${pkgname}"
     install -Dm644 "${pkgname%-bin}.desktop" -t "${pkgdir}/usr/share/applications"
-    #install -Dm644 "${srcdir}/${pkgname%-bin}-${pkgver}.png" "${pkgdir}/usr/share/pixmaps/${pkgname%-bin}.png"
+    install -Dm644 "${srcdir}/${pkgname%-bin}.png" -t "${pkgdir}/usr/share/pixmaps"
 }
