python-openstep-plist-git: auto updated to 0.4.0.r0.g61dc6ac-1

--- a/aur-repo/python-openstep-plist-git/PKGBUILD
+++ b/aur-repo/python-openstep-plist-git/PKGBUILD
@@ -1,8 +1,8 @@
 # Maintainer: taotieren <admin@taotieren.com>
 
 pkgname=python-openstep-plist-git
-pkgver=0.3.1.r3.g4f8a953
-pkgrel=13
+pkgver=0.4.0.r0.g61dc6ac
+pkgrel=1
 pkgdesc='OpenStep plist parser and writer written in Cython'
 url='https://github.com/fonttools/openstep-plist'
 license=('MIT')
