--- a/aur-repo/canopenlinux-git/PKGBUILD
+++ b/aur-repo/canopenlinux-git/PKGBUILD
@@ -2,7 +2,7 @@
 
 pkgbase=canopenlinux-git
 pkgname=canopenlinux-git
-pkgver=4.0.r21.gef12016
+pkgver=4.0.r22.ge5655d1
 pkgrel=1
 groups=()
 pkgdesc="CANopenNode on Linux devices"
