linuxqq: auto updated to 5:3.2.13_28788-1

--- a/aur-repo/linuxqq/PKGBUILD
+++ b/aur-repo/linuxqq/PKGBUILD
@@ -2,7 +2,7 @@
 # Contributor: Integral <integral@member.fsf.org>
 
 pkgname=linuxqq
-pkgver=3.2.12_240902
+pkgver=3.2.13_28788
 pkgrel=1
 epoch=5
 pkgdesc="New Linux QQ based on Electron"
@@ -12,14 +12,14 @@ license=('LicenseRef-QQ')
 conflicts=("${pkgname}-nt-bwrap")
 depends=('nss' 'alsa-lib' 'gtk3' 'gjs' 'at-spi2-core' 'libvips' 'openjpeg2' 'openslide')
 optdepends=('libappindicator-gtk3: Allow QQ to extend a menu via Ayatana indicators in Unity, KDE or Systray (GTK+ 3 library).')
-source_x86_64=("https://dldir1.qq.com/qqfile/qq/QQNT/Linux/QQ_${pkgver}_amd64_01.deb")
-source_aarch64=("https://dldir1.qq.com/qqfile/qq/QQNT/Linux/QQ_${pkgver}_arm64_01.deb")
-source_loong64=("https://dldir1.qq.com/qqfile/qq/QQNT/Linux/QQ_${pkgver}_loongarch64_01.deb")
+source_x86_64=("https://dldir1.qq.com/qqfile/qq/QQNT/55fb6434/linuxqq_${pkgver/_/-}_amd64.deb")
+source_aarch64=("https://dldir1.qq.com/qqfile/qq/QQNT/55fb6434/linuxqq_${pkgver/_/-}_arm64.deb")
+source_loong64=("https://dldir1.qq.com/qqfile/qq/QQNT/55fb6434/linuxqq_${pkgver/_/-}_loongarch64.deb")
 source=("${pkgname}.sh")
 sha512sums=('f463c5cb3323b86d9ea312d75f1e53d064885dabde2d1d6a554e083e15b5ff7fc548a96670284e5e996456c7a2ce4a25e9acb80bf48459ea47a8813d62203cb4')
-sha512sums_x86_64=('0af3697336d0f2cbdcac04bbe7539f5f5dccc613cbd773e2f3c13939998fdde8739aaa05468147aeb5e0cdbd0f305b6cd7bfa4ed4b41ef0fb62228ca8b8f8240')
-sha512sums_aarch64=('659a53dea002263ab18b2bb37c6f36574ea3e975e147a1c1021d26a23344c1263c625ec8305dbf0b61ed08abfabd72f8af78c562bf643c843b1fd3062967e19d')
-sha512sums_loong64=('cc563e2ae29c1d7216794a558c5182a1128abcad6f209a7d236ac5a377a5c9268b3626a22a65a818446de5eaf71052f12eec7c88f6d8ce7ac2b4999cea19a632')
+sha512sums_x86_64=('d02616b9775a51337845d3b9cb904748cf25bdc1b5144fb7aab974a5830d7c925934d19e1dd55d07f06abf65a1f476cc03b17739aa80f32a0daa967c8d685e82')
+sha512sums_aarch64=('8aa9af4b9e0f0a121a5646264ad5965b144ab6d248ef13ac0756b07d2c219ede59795f7bc67af48ddf2e910fb948029831ccaada182fb71701e62d5fe6775200')
+sha512sums_loong64=('f018b5c32031372822c3adb640193bdd7e2e3c72b5c8394c79d3968af32977e06ddf856b96728cf7449417b6824137c0c30b5f203ef7accf5a7315b5ecb642ca')
 options=('!strip' '!debug')
 
 package() {
