--- a/aur-repo/n-m3u8dl-re-git/PKGBUILD
+++ b/aur-repo/n-m3u8dl-re-git/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: taotieren <admin@taotieren.com>
 
 pkgname=n-m3u8dl-re-git
-pkgver=0.2.0.beta.r38.g2bf4f29
+pkgver=0.2.0.beta.r40.gd1ffac8
 pkgrel=1
 epoch=
 pkgdesc="Cross-Platform, beautiful and powerful stream downloader for DASH/HLS."
