--- a/aur-repo/pyinstaller-hooks-contrib/PKGBUILD
+++ b/aur-repo/pyinstaller-hooks-contrib/PKGBUILD
@@ -1,8 +1,9 @@
+# Maintainer: 
 # Contributor: Mark Wagie <mark dot wagie at proton dot me>
 # Contributor: Sam <dev at samarthj dot com>
 pkgname=pyinstaller-hooks-contrib
 pkgver=2024.8
-pkgrel=1
+pkgrel=2
 pkgdesc="Community maintained hooks for PyInstaller"
 arch=('any')
 url="https://github.com/pyinstaller/pyinstaller-hooks-contrib"
