--- a/aur-repo/python-pyclipper-git/PKGBUILD
+++ b/aur-repo/python-pyclipper-git/PKGBUILD
@@ -1,8 +1,8 @@
 # Maintainer: taotieren <admin@taotieren.com>
 
 pkgname=python-pyclipper-git
-pkgver=1.3.0.post5.r3.g410553d
-pkgrel=12
+pkgver=1.3.0.post6.r0.g3133c9c
+pkgrel=1
 pkgdesc='Cython wrapper for the C++ translation of the Angus Johnsons Clipper library'
 url='https://github.com/fonttools/pyclipper'
 license=('MIT')
