--- a/aur-repo/xiaomi-hyperos-bootloader-bypass-git/PKGBUILD
+++ b/aur-repo/xiaomi-hyperos-bootloader-bypass-git/PKGBUILD
@@ -2,7 +2,7 @@
 
 pkgbase=xiaomi-hyperos-bootloader-bypass-git
 pkgname=xiaomi-hyperos-bootloader-bypass-git
-pkgver=1.0.fix.r19.g249b98e
+pkgver=1.0.fix.r21.g0af1b9b
 pkgrel=1
 pkgdesc="A PoC that exploits a vulnerability to bypass the Xiaomi HyperOS community restrictions of BootLoader unlocked account bindings."
 arch=(any)
