--- a/aur-repo/kpatch-git/PKGBUILD
+++ b/aur-repo/kpatch-git/PKGBUILD
@@ -3,8 +3,8 @@
 # Contributor: Quey-Liang Kao <s101062801@m101.nthu.edu.tw>
 
 pkgname=kpatch-git
-pkgver=0.9.9.r56.g5787dcd
-pkgrel=3
+pkgver=0.9.9.r58.g17b795b
+pkgrel=1
 pkgdesc='Live kernel patching (git)'
 arch=(i686 x86_64)
 url=https://github.com/dynup/kpatch
