--- a/aur-repo/cloud-fs-bin/lilac.yaml
+++ b/aur-repo/cloud-fs-bin/lilac.yaml
@@ -7,7 +7,7 @@ post_build_script: |
 update_on:
   - source: github
     github: cloud-fs/cloud-fs.github.io
-    use_latest_release: true
+    use_max_tag: true
     prefix: v
-    # use_max_tag: true
+    # use_latest_release: true
     # prefix: v
