--- a/aur-repo/cloud-fs-bin/lilac.yaml
+++ b/aur-repo/cloud-fs-bin/lilac.yaml
@@ -1,5 +1,7 @@
 maintainers:
   - github: taotieren
+pre_build_script: |
+update_pkgver_and_pkgrel(_G.newver)
 build_prefix: extra-x86_64
 post_build_script: |
   git_pkgbuild_commit()
