--- a/aur-repo/dingtalk-bin/lilac.yaml
+++ b/aur-repo/dingtalk-bin/lilac.yaml
@@ -1,14 +1,7 @@
 maintainers:
   - github: taotieren
-
-pre_build_script: aur_pre_build(maintainers=['zhullyb', 'sukanka', 'lilac'])
-
+pre_build_script: aur_pre_build(maintainers=['zhullyb', 'sukanka', 'yjun', 'witt.9099'])
 post_build_script: aur_post_build
-
 update_on:
-  - source: regex
-    url: "https://page.dingtalk.com/wow/z/dingtalk/simple/ddhomedownload#/"
-    regex: 'com.alibabainc.dingtalk_(\d+.\d+.\d+.\d+)_adm64.deb'
-
   - source: aur
     aur: dingtalk-bin
