--- a/aur-repo/sudo-rs/PKGBUILD
+++ b/aur-repo/sudo-rs/PKGBUILD
@@ -13,12 +13,12 @@ provides=(${pkgname})
 conflicts=(${pkgname})
 replaces=()
 depends=(gcc-libs
-     glibc
-     pam)
+    glibc
+    pam)
 makedepends=(cargo
     clang)
 backup=()
-options=()
+options=(!debug !strip)
 install=${pkgname}.install
 source=("${pkgname}-${pkgver}.tar.gz::${url}/archive/refs/tags/v${pkgver}.tar.gz")
 sha256sums=('2371c91644185c2bcf1f02408c2cc7a79b1dd1ba740088a9a16f0f947b649cdc')
@@ -55,7 +55,7 @@ package() {
     cd "${srcdir}/${pkgname}-${pkgver}/"
     cargo install --no-track --all-features --root "$pkgdir/usr/" --path .
 
-# Rename it to end in `-rs` to eliminate conflicts with `sudo` `util-linux`.
+    # Rename it to end in `-rs` to eliminate conflicts with `sudo` `util-linux`.
     directory="$pkgdir/usr/bin"
 
     cd "$directory"
