--- a/aur-repo/todesk-bin/lilac.yaml
+++ b/aur-repo/todesk-bin/lilac.yaml
@@ -1,10 +1,7 @@
 maintainers:
   - github: taotieren
-
-pre_build_script: aur_pre_build(maintainers='yjun')
-
+pre_build_script: aur_pre_build(maintainers=['yjun', 'witt.9099'])
 post_build: aur_post_build
-
 update_on:
   - source: aur
     github: todesk-bin
