--- a/aur-repo/electron-builder/lilac.yaml
+++ b/aur-repo/electron-builder/lilac.yaml
@@ -1,10 +1,7 @@
 maintainers:
   - github: taotieren
-
-pre_build_script: aur_pre_build(maintainers='cygn')
-
+pre_build_script: aur_pre_build(maintainers=['cygn','zxp19821005'])
 post_build: aur_post_build
-
 update_on:
   - source: aur
     github: electron-builder
