--- a/aur-repo/pyinstaller-hooks-contrib/lilac.yaml
+++ b/aur-repo/pyinstaller-hooks-contrib/lilac.yaml
@@ -1,10 +1,7 @@
 maintainers:
   - github: taotieren
-
-pre_build_script: aur_pre_build(maintainers=['yochananmarqos'])
-
+pre_build_script: aur_pre_build(maintainers=['yochananmarqos','envolution'])
 post_build: aur_post_build
-
 update_on:
   - source: aur
     aur: pyinstaller-hooks-contrib
