--- a/aur-repo/wechat-universal-bwrap/lilac.yaml
+++ b/aur-repo/wechat-universal-bwrap/lilac.yaml
@@ -1,10 +1,7 @@
 maintainers:
   - github: taotieren
-
-pre_build_script: aur_pre_build(maintainers='7Ji')
-
+pre_build_script: aur_pre_build(maintainers=['7Ji','devome','leaeasy'])
 post_build_script: aur_post_build
-
 update_on:
   - source: aur
     aur: wechat-universal-bwrap
