--- a/aur-repo/wps-office-cn/lilac.yaml
+++ b/aur-repo/wps-office-cn/lilac.yaml
@@ -1,10 +1,7 @@
 maintainers:
   - github: taotieren
-
-pre_build_script: aur_pre_build(maintainers='Universebenzene')
-
+pre_build_script: aur_pre_build(maintainers=['Universebenzene','witt.9099'])
 post_build: aur_post_build
-
 update_on:
   - source: aur
     aur: wps-office-cn
