linuxqq: auto updated to 5:3.2.13_29271-3

--- a/aur-repo/linuxqq/PKGBUILD
+++ b/aur-repo/linuxqq/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgname=linuxqq
 pkgver=3.2.13_29271
-pkgrel=2
+pkgrel=3
 epoch=5
 pkgdesc="New Linux QQ based on Electron"
 arch=('x86_64' 'aarch64' 'loong64')
@@ -12,9 +12,11 @@ license=('LicenseRef-QQ')
 conflicts=("${pkgname}-nt-bwrap")
 depends=('nss' 'alsa-lib' 'gtk3' 'gjs' 'at-spi2-core' 'libvips' 'openjpeg2' 'openslide')
 optdepends=('libappindicator-gtk3: Allow QQ to extend a menu via Ayatana indicators in Unity, KDE or Systray (GTK+ 3 library).')
-source_x86_64=("https://dldir1.qq.com/qqfile/qq/QQNT/a090850e/linuxqq_${pkgver/_/-}_amd64.deb")
-source_aarch64=("https://dldir1.qq.com/qqfile/qq/QQNT/a090850e/linuxqq_${pkgver/_/-}_arm64.deb")
-source_loong64=("https://dldir1.qq.com/qqfile/qq/QQNT/a090850e/linuxqq_${pkgver/_/-}_loongarch64.deb")
+_md5_prefix=a090850e
+_src_prefix="${pkgname}_${pkgver/_/-}"
+source_x86_64=("https://dldir1.qq.com/qqfile/qq/QQNT/${_md5_prefix}/${_src_prefix}_amd64.deb")
+source_aarch64=("https://dldir1.qq.com/qqfile/qq/QQNT/${_md5_prefix}/${_src_prefix}_arm64.deb")
+source_loong64=("https://dldir1.qq.com/qqfile/qq/QQNT/${_md5_prefix}/${_src_prefix}_loongarch64.deb")
 source=("${pkgname}.sh")
 sha512sums=('f463c5cb3323b86d9ea312d75f1e53d064885dabde2d1d6a554e083e15b5ff7fc548a96670284e5e996456c7a2ce4a25e9acb80bf48459ea47a8813d62203cb4')
 sha512sums_x86_64=('fff691cdf9bb4284244bbb35b24b6464404ae97aa63f34153a43673d038d9bb9bf3e08aa599b5a23a104da596e1a86f2f7282752db6fbfd95c51c1d1a685a641')
