icesugar-git: auto updated to 1.1a.r29.ga8c4b15-1

--- a/aur-repo/icesugar-git/PKGBUILD
+++ b/aur-repo/icesugar-git/PKGBUILD
@@ -14,8 +14,8 @@ pkgname=(
     icesugar-pro-demo-git
     icesugar-pro-doc-git
 )
-pkgver=1.1a.r27.g2abb4c7
-pkgrel=10
+pkgver=1.1a.r29.ga8c4b15
+pkgrel=1
 epoch=
 pkgdesc="iCESugar FPGA Board (base on iCE40UP5k) "
 arch=(x86_64
