--- a/aur-repo/deeplx-git/PKGBUILD
+++ b/aur-repo/deeplx-git/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: taotieren <admin@taotieren.com>
 
 pkgname=deeplx-git
-pkgver=0.9.8.r0.gc678e87
+pkgver=0.9.8.3.r0.gede6229
 pkgrel=1
 pkgdesc="DeepL Free API (No TOKEN required)"
 arch=(x86_64
