pyinstaller-hooks-contrib: auto updated to 2024.9-1

--- a/aur-repo/pyinstaller-hooks-contrib/PKGBUILD
+++ b/aur-repo/pyinstaller-hooks-contrib/PKGBUILD
@@ -1,9 +1,9 @@
-# Maintainer: 
+# Maintainer: envolution
 # Contributor: Mark Wagie <mark dot wagie at proton dot me>
 # Contributor: Sam <dev at samarthj dot com>
 pkgname=pyinstaller-hooks-contrib
-pkgver=2024.8
-pkgrel=2
+pkgver=2024.9
+pkgrel=1
 pkgdesc="Community maintained hooks for PyInstaller"
 arch=('any')
 url="https://github.com/pyinstaller/pyinstaller-hooks-contrib"
@@ -18,7 +18,7 @@ makedepends=(
   'python-setuptools'
 )
 source=("$pkgname-$pkgver.tar.gz::$url/archive/refs/tags/v$pkgver.tar.gz")
-sha256sums=('9b2f0894e6b0bceca38dd5eba042a6b19c2eb70fe41732756beb27d7e816fd84')
+sha256sums=('606dd5e38d0af795a25f121f208c944745356aefe6894ad561b7c37c85539971')
 
 build() {
   cd "$pkgname-$pkgver"
@@ -29,3 +29,5 @@ package() {
   cd "$pkgname-$pkgver"
   python -m installer --destdir="$pkgdir" dist/*.whl
 }
+
+# vim: ts=2 sw=2 et:
