--- a/aur-repo/ttf-lxgw-wenkai-lite/lilac.yaml
+++ b/aur-repo/ttf-lxgw-wenkai-lite/lilac.yaml
@@ -9,5 +9,7 @@ post_build_script: |
 update_on:
   - source: github
     github: lxgw/LxgwWenKai-Lite
-    use_latest_release: true
+    use_max_tag: true
     prefix: v
+    # use_latest_release: true
+    # prefix: v
