--- a/aur-repo/cargo-dfu/lilac.yaml
+++ b/aur-repo/cargo-dfu/lilac.yaml
@@ -9,5 +9,7 @@ post_build_script: |
 update_on:
   - source: github
     github: dfu-rs/cargo-dfu
-    use_max_tag: true
+    use_latest_release: true
     prefix: v
+    # use_max_tag: true
+    # prefix: v
