freerouting-zh-cn-git: auto updated to 2.0.0.r1.g33b29ff-1

--- a/aur-repo/freerouting-zh-cn-git/PKGBUILD
+++ b/aur-repo/freerouting-zh-cn-git/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: taotieren <admin@taotieren.com>
 
 pkgname=freerouting-zh-cn-git
-pkgver=1.9.0.r148.gfac1d13
+pkgver=2.0.0.r1.g33b29ff
 pkgrel=1
 _jrever=21
 _jdkver=21
