--- a/aur-repo/reader-pro-bin/reader-pro-single.service
+++ b/aur-repo/reader-pro-bin/reader-pro-single.service
@@ -12,7 +12,7 @@ SuccessExitStatus=143
 Restart=on-failure
 RestartSec=5
 TimeoutStartSec=30
-TimeoutStopSec=½
+TimeoutStopSec=3
 StandardOutput=journal+console
 StandardError=journal+console
 LimitNOFILE=65536
