kicad-pcb-diff: auto updated to 2.5.5-1

--- a/aur-repo/kicad-pcb-diff/PKGBUILD
+++ b/aur-repo/kicad-pcb-diff/PKGBUILD
@@ -4,7 +4,7 @@ pkgbase=kicad-pcb-diff
 pkgname=kicad-pcb-diff
 _name=kidiff
 pkgver=2.5.5
-pkgrel=0
+pkgrel=1
 epoch=
 pkgdesc="Tool to generate a PDF file showing the changes between two KiCad PCB/SCH files. Also a git plug-in."
 arch=('any')
@@ -32,7 +32,7 @@ install=
 changelog=
 source=("${_name}-${pkgver}.tar.gz::https://files.pythonhosted.org/packages/source/${_name::1}/${_name//-/_}/${_name//-/_}-${pkgver}.tar.gz")
 noextract=()
-sha256sums=('SKIP')
+sha256sums=('e90c0e13cf2eefc375495cebbd470b427a739c824e6a7ea8a7c926b74be753e4')
 #validpgpkeys=()
 
 build() {
